Error Mitigation/MagiCoder/Data/javax_management_relation/javax_management_relationOutputResult.txt
Sample: RelationNotification_20
----------------------------------------------------------------
output:
./Data/javax_management_relation/javaFiles/RelationNotification_20.java:5: error: cannot find symbol
        RelationNotification notification = new RelationNotification(RelationNotification.RELATION_CHANGE, "Relation changed", "Relation ID");
                                                                                         ^
  symbol:   variable RELATION_CHANGE
  location: class RelationNotification
1 error


================================================================

